# oresat-gps-software

./: .flake8  .gitignore  .gitmodules  .ycm_extra_conf.py  BBB_internet.txt  CMakeLists.txt  GPS_state_diagram.drawio  README.md  README.rst  gen.py  od.yaml  oresat-gpsd.service  org.OreSat.GPS.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: gpio-tests.yml  pypi.yaml  tests.yaml
archive/gnss-sdr/data/sample_data/: .gitignore
archive/gnss-sdr/data/usb_board/: run.sh
archive/gnss-sdr/src/algorithms/acquisition/adapters/: CMakeLists.txt
archive/gnss-sdr/src/algorithms/acquisition/libs/: CMakeLists.txt
archive/gnss-sdr/src/algorithms/channel/adapters/: channel.cc
archive/gnss-sdr/src/algorithms/libs/volk_gnsssdr_module/volk_gnsssdr/: CMakeLists.txt
archive/gnss-sdr/src/algorithms/signal_source/adapters/: CMakeLists.txt
archive/gnss-sdr/src/algorithms/tracking/libs/: CMakeLists.txt
archive/gnss-sdr/src/core/receiver/: CMakeLists.txt  control_thread.cc  control_thread.h  gnss_flowgraph.cc  gnss_flowgraph.h
archive/gnss-sdr/src/main/: main.cc
archive/gps_usb_board_sw/: Setup_2232H_Test.cpp
archive/gps_usb_board_sw/FTDI/release/examples/: Makefile  Rules.make
archive/gps_usb_board_sw/FTDI/release/examples/EEPROM/erase/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/EEPROM/read/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/EEPROM/user/read/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/EEPROM/user/size/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/EEPROM/write/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/Events/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/SetVIDPID/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/Simple/: Makefile
archive/gps_usb_board_sw/FTDI/release/examples/Timeouts/: Makefile
data/: data.txt  skytraq_bi_data_2021-04-24-01-53-00.txt  skytraq_binary.txt
debian/: changelog  control  oresat-gps.install  postrm  prerm  rules
device_tree_overlays/: Makefile  gps-00A0.dts
docs/: GPS_state_diagram.drawio
gnss-sdr/: .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  README.md  install_gnss_sdr.txt  notes.txt
gnss-sdr/data/launch_12_data/: .gitignore  README.md  launch_12_data.conf
gnss-sdr/data/usb_board/: .gitignore  clean.sh  test_usb_board.conf
gnss-sdr/launch_12_data/: FixSigned.c  run.sh
gnss-sdr/sample_data/: clean.sh  gnss_sdr_sample_data.conf  run.sh
gnss-sdr/src/: CMakeLists.txt
gnss-sdr/src/algorithms/acquisition/gnuradio_blocks/: CMakeLists.txt
gnss-sdr/src/algorithms/channel/adapters/: channel.h
gnss-sdr/src/algorithms/libs/: CMakeLists.txt
gnss-sdr/src/algorithms/signal_source/libs/: CMakeLists.txt
gnss-sdr/src/algorithms/tracking/adapters/: CMakeLists.txt
gnss-sdr/src/algorithms/tracking/gnuradio_blocks/: CMakeLists.txt
gnss-sdr/src/core/libs/: CMakeLists.txt
gnss-sdr/src/core/receiver/: gnss_block_factory.cc
gnss-sdr/src/core/system_parameters/: CMakeLists.txt
gnss-sdr/src/main/: CMakeLists.txt
gnss-sdr/src/utils/: CMakeLists.txt
gps_usb_board_sw/: .gitignore  Makefile  max2769.cpp  max2769.h  notes.txt
gps_usb_board_sw/FTDI/release/examples/BitMode/: Makefile
gps_usb_board_sw/FTDI/release/examples/EEPROM/user/write/: Makefile
gps_usb_board_sw/FTDI/release/examples/LargeRead/: Makefile
gps_usb_board_sw/FTDI/release/examples/MultiThread/: Makefile
gps_usb_board_sw/FTDI/release/examples/static/: Makefile
oresat_gps/: __init__.py  __main__.py  _gpio.py  gpio.py  gps.py  gps_datetime.py  gps_resource.py  gps_service.py  main.py  skytraq.py
oresat_gps/data/: oresat_gps.dcf  oresat_gps.eds
oresat_gps/templates/: skytraq.html
scripts/: skytraq-logger.service  skytraq_binary.py  skytraq_binary_logger.py  skytraq_logger.sh  skytraq_nmea.py  skytraq_off.sh  skytraq_on.sh  test.py
src/: controller.cc  controller.cpp  controller.h  gps_data.h  log_message.cc  log_message.cpp  log_message.h  main.cc  main.cpp  state_machine.cc  state_machine.h
tests/: __init__.py  mytest.py  test_skytraq.py
