[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-gps"
description = "OreSat GPS app"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "gpiod",
    "oresat-cand",
    "pyserial",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "oresat-configs",
    "ruff",
]

[project.scripts]
oresat-gps = "oresat_gps.__main__:main"

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools_scm]
version_file = "oresat_gps/_version.py"

[tool.ruff]
line-length = 100
