[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-gps"
description = "OreSat GPS OLAF app"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "oresat-olaf>=3.6.5",
    "pyserial",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "build",
    "ruff",
    "mypy",
    "types-pyserial",
    "pytest",
    "pytest-cov",
]

[project.scripts]
oresat-gps = "oresat_gps.__main__:main"

[tool.setuptools.packages.find]
exclude = ["docs*"]

[tool.setuptools.package-data]
"*" = ["*.html"]

[tool.setuptools_scm]
write_to = "oresat_gps/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # D203 and D213 conflict with D211 and D212. Prefer the latter which follow
    # PEP257
    "D203",
    "D213",
    # Conflicts with formatter
    "COM812", # missing-trailing-comma
    # Stylistic choices for quote-style = preserve
    "Q000",  # Single quotes found but double quotes preferred
    "Q002",  # Single quote docstring found but double quotes preferred
    "D300",  # Use triple double quotes
    # FIXME: These should be turned back on but take effort
    "D102",  # Missing docstring in public method
    "D107",  # Missing docstring in `__init__`
    # These are the opposite of what I want
    "D413",  # Missing blank line after last section
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use an f-string literal
    "FIX",  # flake8-fixme
    "TD",  # flake8-todos
    # This might be good to turn on later, right now I'm on the fence about it
    "TRY003",  # Avoid specifying long messages outside the exception class
    # Another one that might be good later but for now is too argessive. Many of
    # the numbers it flags are obvious from context.
    "PLR2004",  # Magic value used in comparison
]

[[tool.mypy.overrides]]
module = "olaf"
ignore_missing_imports = true
