[metadata]
name = oresat-gps
version = attr: oresat_gps.__version__
description = OreSat GPS app
long_description = file: README.rst
url = https://github.com/oresat/oresat-gps-software
author = PSAS
author_email = oresat@pdx.edu
maintainer = PSAS
maintainer_email = oresat@pdx.edu
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Embedded Systems

[options]
packages = find:
install_requires =
    oresat-olaf<=1.0.0
    pyserial
python_requires = >=3.7

[options.package_data]
oresat_gps = 
    data/*
    templates/*

[options.entry_points]
console_scripts =
    oresat-gps = oresat_gps.__main__:main
